@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-02-24T08:16:16Z",
+  "timestamp" : "2024-02-24T16:16:48Z",
   "count_outdated" : 190634,
   "uniques_outdated" : 1950,
-  "count" : 194934,
+  "count" : 195026,
   "uniques" : 1970,
   "clones" : [
     {
       "timestamp": "2024-02-10T00:00:00Z",
-      "count": 133,
-      "count_minmax": [ 111, 299 ],
-      "count_decinc": [ 166, 299 ],
+      "count": 40,
+      "count_minmax": [ 40, 299 ],
+      "count_decinc": [ 259, 299 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2024-02-24T00:00:00Z",
-      "count": 111,
-      "count_minmax": [ 111, 111 ],
-      "count_decinc": [ 0, 111 ],
+      "count": 203,
+      "count_minmax": [ 111, 203 ],
+      "count_decinc": [ 0, 203 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
